--- a/Connect4/Connect4.vcxproj
+++ b/Connect4/Connect4.vcxproj
@@ -158,6 +158,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseDonnees.h" />
+    <ClInclude Include="liste.hpp" />
+    <ClInclude Include="vecteur.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
