--- a/Connect4/Connect4.vcxproj.filters
+++ b/Connect4/Connect4.vcxproj.filters
@@ -29,5 +29,11 @@
     <ClInclude Include="BaseDonnees.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="vecteur.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="liste.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
